website/versioned_docs/version-2.0.0-alpha.11/node-client.authcontainer.md
---
id: version-2.0.0-alpha.11-node-client.authcontainer
title: AuthContainer class
hide_title: true
original_id: node-client.authcontainer
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## AuthContainer class


<b>Signature:</b>

```typescript
export declare class AuthContainer<T extends BaseAPIClient> 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(parent)](./node-client.authcontainer._constructor_.md) |  | Constructs a new instance of the <code>AuthContainer</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [currentIdentity](./node-client.authcontainer.currentidentity.md) |  | <code>Identity &#124; null</code> |  |
|  [currentSessionID](./node-client.authcontainer.currentsessionid.md) |  | <code>string &#124; null</code> |  |
|  [currentUser](./node-client.authcontainer.currentuser.md) |  | <code>User &#124; null</code> |  |
|  [extraSessionInfoOptions](./node-client.authcontainer.extrasessioninfooptions.md) |  | <code>ExtraSessionInfoOptions</code> |  |
|  [parent](./node-client.authcontainer.parent.md) |  | <code>Container&lt;T&gt;</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [changePassword(newPassword, oldPassword)](./node-client.authcontainer.changepassword.md) |  |  |
|  [deleteOAuthProvider(providerID)](./node-client.authcontainer.deleteoauthprovider.md) |  |  |
|  [getSession(id)](./node-client.authcontainer.getsession.md) |  |  |
|  [linkOAuthProviderWithAccessToken(providerID, accessToken)](./node-client.authcontainer.linkoauthproviderwithaccesstoken.md) |  |  |
|  [listSessions()](./node-client.authcontainer.listsessions.md) |  |  |
|  [login(loginID, password, options)](./node-client.authcontainer.login.md) |  |  |
|  [loginOAuthProviderWithAccessToken(providerID, accessToken, options)](./node-client.authcontainer.loginoauthproviderwithaccesstoken.md) |  |  |
|  [loginWithCustomToken(token, options)](./node-client.authcontainer.loginwithcustomtoken.md) |  |  |
|  [logout()](./node-client.authcontainer.logout.md) |  |  |
|  [me()](./node-client.authcontainer.me.md) |  |  |
|  [persistResponse(response)](./node-client.authcontainer.persistresponse.md) |  |  |
|  [requestEmailVerification(email)](./node-client.authcontainer.requestemailverification.md) |  |  |
|  [requestForgotPasswordEmail(email)](./node-client.authcontainer.requestforgotpasswordemail.md) |  |  |
|  [resetPassword(form)](./node-client.authcontainer.resetpassword.md) |  |  |
|  [revokeOtherSessions()](./node-client.authcontainer.revokeothersessions.md) |  |  |
|  [revokeSession(id)](./node-client.authcontainer.revokesession.md) |  |  |
|  [saveExtraSessionInfoOptions()](./node-client.authcontainer.saveextrasessioninfooptions.md) |  |  |
|  [signup(loginIDs, password, options)](./node-client.authcontainer.signup.md) |  |  |
|  [signupWithEmail(email, password, options)](./node-client.authcontainer.signupwithemail.md) |  | signupWithEmail is a shorthand of [the signup() method](./node-client.authcontainer.signup.md)<!-- -->. |
|  [signupWithUsername(username, password, options)](./node-client.authcontainer.signupwithusername.md) |  | signupWithUsername is a shorthand of [the signup() method](./node-client.authcontainer.signup.md)<!-- -->. |
|  [updateMetadata(metadata)](./node-client.authcontainer.updatemetadata.md) |  |  |
|  [updateSession(id, patch)](./node-client.authcontainer.updatesession.md) |  |  |
|  [verifyWithCode(code)](./node-client.authcontainer.verifywithcode.md) |  |  |

